# data-structures

./: .gitignore  CMakeLists.txt
include/: bst.h  dynamic-array.h  linked-list.h  queue.h  stack.h
src/: main.c
src/bst/: bst.c
src/dynamic-array/: dynamic-array.c
src/linked-list/: linked-list.c
src/queue/: queue.c
src/stack/: stack.c
